# data-intelligence-assistant

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  JAVA_BACKEND_COMPLETE.md  JAVA_BACKEND_FINAL_SUMMARY.md  JAVA_BACKEND_STATUS.md  JAVA_MIGRATION_GUIDE.md  LICENSE  Makefile  OCI_DEPLOYMENT.md  README.md  WINDOWS_SETUP.md  diagnose.ps1  diagnose.sh  docker-compose.dev.yml  docker-compose.yml  plan.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  OCI_SETUP.md  README.md  init_db.py  pom.xml  requirements.txt  run.bat  run.sh  seed_demo_accounts.py
backend-java/: .gitignore  API_TESTING_GUIDE.md  COMPILATION_GUIDE.md  README.md  SETUP_NOTES.md  pom.xml
backend-java/src/main/java/com/intelligence/assistant/: AssistantApplication.java
backend-java/src/main/java/com/intelligence/assistant/config/: CorsConfig.java  SecurityConfig.java
backend-java/src/main/java/com/intelligence/assistant/connector/: BaseConnector.java  BitbucketConnector.java
backend-java/src/main/java/com/intelligence/assistant/controller/: HealthController.java
backend-java/src/main/java/com/intelligence/assistant/dto/: AuthRequest.java  QueryRequest.java
backend-java/src/main/java/com/intelligence/assistant/exception/: GlobalExceptionHandler.java
backend-java/src/main/java/com/intelligence/assistant/model/: ChatMessage.java  ChatSession.java
backend-java/src/main/java/com/intelligence/assistant/repository/: TeamRepository.java  UserRepository.java
backend-java/src/main/java/com/intelligence/assistant/security/: JwtAuthenticationFilter.java  JwtUtil.java
backend-java/src/main/java/com/intelligence/assistant/service/: AuthService.java  ChatService.java  UserService.java
backend-java/src/main/resources/: application.yml
backend/app/: auth.py  database.py  main.py
backend/app/connectors/: __init__.py  base_connector.py  bitbucket_connector.py  confluence_connector.py  jira_connector.py
backend/app/services/: chunking_service.py  connector_service.py  data_source_service.py  encryption_service.py  rag_service.py  scheduler_service.py  sync_service.py  team_service.py  user_service.py  webhook_service.py
backend/docs/: openapi.yaml
backend/src/main/java/com/intelligence/assistant/config/: DatabaseConfig.java  OpenApiConfig.java  PasswordEncoderConfig.java  SecurityConfig.java
backend/src/main/java/com/intelligence/assistant/connector/: ConfluenceConnector.java  JiraConnector.java
backend/src/main/resources/: application.yml
cli/: README.md  build.sh  dia_cli.py  pom.xml  requirements.txt
frontend/: Dockerfile  LOGO_GUIDE.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AnalyticsDashboard.js  AuthForm.js  ChatInterface.js  ContextSelector.js  DataSourceForm.js  DataSourceManager.js  Header.js  Logo.js  LogoIcon.js  SearchFilters.js  SettingsPanel.js  SourceSelector.js  SyncStatus.js  TeamForm.js  TeamManager.js  Toast.js  UserProfile.js
frontend/src/config/: branding.js
frontend/src/hooks/: useToast.js
scripts/: dia  diagnose.bat  init-db.sql  pre-commit  start-backend.sh  start-both.sh  start-dev.sh  start-frontend.sh
slack-bot/: .env.example  README.md  build.sh  pom.xml  slack_bot.py
(+34 files in other folders)
